# fckweb

./: .gitignore  Cargo.toml  self-signed.sh
client/: Cargo.toml
client/src/: main.rs
eframe_template/: Cargo.toml
eframe_template/src/: app.rs  main.rs
egui-shortcuts/: Cargo.toml
egui-shortcuts/src/: lib.rs  spawner.rs
examples/chat/: self-signed.sh
examples/chat/client/: Cargo.toml
examples/chat/client/src/: app.rs  main.rs
examples/chat/common/: Cargo.toml
examples/chat/common/src/: lib.rs
examples/chat/server/: Cargo.toml
examples/chat/server/src/: http.rs  main.rs
examples/egui-basic/: .gitignore
examples/egui-basic/client/: Cargo.toml
examples/egui-basic/client/src/: app.rs
examples/egui-basic/server/: Cargo.toml
examples/egui/client/: Cargo.toml
examples/egui/client/src/: app.rs
examples/egui/common/: Cargo.toml
examples/egui/common/src/: lib.rs
examples/egui/server/: Cargo.toml
examples/egui/server/src/: main.rs
examples/reverse-service/: self-signed.sh
examples/reverse-service/client/: Cargo.toml
examples/reverse-service/client/src/: app.rs  main.rs
examples/reverse-service/common/: Cargo.toml
examples/reverse-service/common/src/: lib.rs
examples/reverse-service/server/: Cargo.toml
examples/reverse-service/server/src/: main.rs
examples/subservice/client/: Cargo.toml
examples/subservice/client/src/: app.rs  main.rs
examples/subservice/common/: Cargo.toml
examples/subservice/common/src/: lib.rs
examples/subservice/server/: Cargo.toml
examples/subservice/server/src/: main.rs
framework/: Cargo.toml
framework/src/: io.rs  lib.rs  sync_bistream.rs
quic-session/: Cargo.toml
quic-session/src/: lib.rs  native.rs  web.rs
server/: Cargo.toml
server/src/: main.rs
