[workspace]
resolver = "2"
members = [ 
    "quic-session",
    "framework",
    "examples/egui-basic/server",
    "examples/egui-basic/client",
    "examples/egui-basic/common",
    "egui-shortcuts",
]

[patch.crates-io]
egui = { git = "https://github.com/emilk/egui.git", rev = "f4ed394" }
eframe = { git = "https://github.com/emilk/egui.git", rev = "f4ed394" }
tarpc = { git = "https://github.com/Masterchef365/tarpc.git", branch = "whiz-port", features = ["serde1"] }
