[workspace]
resolver = "2"
members = [ 
    "quic-session",
    "framework",
    "examples/egui-basic/server",
    "examples/egui-basic/client",
    "examples/egui-basic/common",
    "examples/chat/server",
    "examples/chat/client",
    "examples/chat/common",
    "egui-shortcuts",
    "egui-shortcuts",
]

[patch.crates-io]
#egui = { git = "https://github.com/emilk/egui.git", rev = "f4ed394" }
#eframe = { git = "https://github.com/emilk/egui.git", rev = "f4ed394" }
#tarpc = { git = "https://github.com/Masterchef365/tarpc.git", branch = "resolver-trouble", features = ["serde1"], default-features = false }
