[workspace]
resolver = "2"
members = [ 
    "framework",
    "quic-session",
    "egui-shortcuts",
    "egui-shortcuts",
    "examples/chat/server",
    "examples/chat/client",
    "examples/chat/common",
    "examples/subservice/server",
    "examples/subservice/client",
    "examples/subservice/common",
    "examples/reverse-service/server",
    "examples/reverse-service/client",
    "examples/reverse-service/common",
]

[patch.crates-io]
#egui = { git = "https://github.com/emilk/egui.git", rev = "f4ed394" }
#eframe = { git = "https://github.com/emilk/egui.git", rev = "f4ed394" }
#tarpc = { git = "https://github.com/Masterchef365/tarpc.git", branch = "resolver-trouble", features = ["serde1"], default-features = false }
