[package]
name = "egui-shortcuts"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.29"
#poll-promise = { version = "0.3.0", features = ["tokio"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
poll-promise = { git = "https://github.com/Masterchef365/poll-promise.git", branch = "wasm", features = ["tokio"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
poll-promise = { git = "https://github.com/Masterchef365/poll-promise.git", branch = "wasm", features = ["web"] }


