[package]
name = "egui-shortcuts"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.30"
#poll-promise = { version = "0.3.0", features = ["tokio"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
#poll-promise = { git = "https://github.com/Masterchef365/poll-promise.git", branch = "wasm", features = ["tokio"] }
poll-promise = { git = "https://github.com/EmbarkStudios/poll-promise.git", branch = "main", features = ["tokio"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
#poll-promise = { git = "https://github.com/Masterchef365/poll-promise.git", branch = "wasm", features = ["web"] }
poll-promise = { git = "https://github.com/EmbarkStudios/poll-promise.git", branch = "main", features = ["web"] }


