[package]
name = "quic-session"
version = "0.1.0"
edition = "2021"

[dependencies]
web-transport = "0.6.0"
log = "0.4"
anyhow = "1"
url = "2.5.2"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.40", features = ["full"] }
quinn = "0.11.5"
web-transport-quinn = "0.3.2"
rustls-pemfile = "2.1.3"
rustls = "0.23.12"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-transport-wasm = "0.4.0"
web-sys = { version = "0.3.70", features = [
"WebTransport",
"WebTransportBidirectionalStream",
"WebTransportCloseInfo",
"WebTransportCongestionControl",
"WebTransportDatagramDuplexStream",
"WebTransportDatagramStats",
"WebTransportError",
"WebTransportErrorOptions",
"WebTransportErrorSource",
"WebTransportHash",
"WebTransportOptions",
"WebTransportReceiveStream",
"WebTransportReceiveStreamStats",
"WebTransportReliabilityMode",
"WebTransportSendStream",
"WebTransportSendStreamOptions",
"WebTransportSendStreamStats",
"WebTransportStats"
] }
