[package]
name = "quic-session"
version = "0.1.0"
edition = "2021"

[dependencies]
web-transport = "0.6.2"
log = "0.4"
anyhow = "1"
url = "2.5.4"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.46", features = ["full"] }
quinn = "0.11.8"
web-transport-quinn = "0.3.4"
rustls-pemfile = "2.2.0"
rustls = "0.23.29"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-transport-wasm = "0.4.7"
web-sys = { version = "0.3.77", features = [
"WebTransport",
"WebTransportBidirectionalStream",
"WebTransportCloseInfo",
"WebTransportCongestionControl",
"WebTransportDatagramDuplexStream",
"WebTransportDatagramStats",
"WebTransportError",
"WebTransportErrorOptions",
"WebTransportErrorSource",
"WebTransportHash",
"WebTransportOptions",
"WebTransportReceiveStream",
"WebTransportReceiveStreamStats",
"WebTransportReliabilityMode",
"WebTransportSendStream",
"WebTransportSendStreamOptions",
"WebTransportSendStreamStats",
"WebTransportStats"
] }
