[package]
name = "chat-common"
version = "0.1.0"
edition = "2021"

[dependencies]
framework = { path = "../../../framework" }
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.69"
tarpc = { git = "https://github.com/Masterchef365/tarpc.git", branch = "resolver-trouble", features = ["serde1"], default-features = false }
